# pySigma-backend-trendmicro

./: LICENSE  README.md  pyproject.toml
sigma/backends/trendmicro/: __init__.py  trendmicro.py
sigma/pipelines/trendmicro/: __init__.py  trendmicro.py
tests/: sigma_rule_converter_example.py  test_backend_trendmicro.py  test_pipelines_trendmicro.py
