[tool.poetry]
name = "pySigma-backend-trendmicro"
version = "0.1.0"
description = "pySigma TrendMicro backend"
authors = ["Pepe Llopis contact@cyberg-academy.io"]
license = "MIT"
repository = "https://github.com/cyberg-academy/pySigma-backend-trendmicro"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = ">=0.9.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"